Fix for upload select list overlap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -583,7 +583,10 @@ form.video_provider {
 	background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='11' height='30'><circle cx='7' cy='15' r='4' fill='#555'/></svg>")  repeat-x;
 	/*    Fill color should be programically altered according to the needs of linkage -- nice red: #6E0001           */
 }
-
+.video_provider .video_type_selection span.ui-selectmenu-button{
+	margin-left: 50px;
+	width: 200px;
+}
 .video_type_selection.custom_select {
 
 
